# dual_sim

./: README.md  setup.sh
auto_slam/: CMakeLists.txt  package.xml
auto_slam/launch/: simple.launch
auto_slam/scripts/: assigner.py  filter.py  functions.py
auto_slam/src/: global_rrt_detector.cpp  local_rrt_detector.cpp
bringup_dual/: CMakeLists.txt  package.xml
bringup_dual/include/: odometry.h
bringup_dual/launch/: control.launch  robot.launch
bringup_dual/script/: script.py
bringup_dual/src/: .odometry.cpp.swp  .vehicle_controller.cpp.swp  backup.cpp  cmd_publish.cpp  odometry.cpp  vehicle_controller.cpp
bringup_dual/worlds/: empty_grid_list.txt  fixed_world.world  test.world  test1.world  test1_4m.world  test2.world  test2_4m.world  test3.world  test3_4m.world
description_dual/: package.xml
description_dual/urdf/: base.gazebo.xacro  base.gazebo.xacro.bkp  base.urdf.xacro
dual_sim/bringup_dual/launch/: robot.launch
dual_sim/bringup_dual/src/: vehicle_controller.cpp
dual_sim/navigation_dual/: CMakeLists.txt  package.xml
dual_sim/navigation_dual/launch/: amcl.launch  move_base.launch  navigation.launch
dual_sim/slam_dual/: package.xml
dual_sim/slam_dual/launch/: slam_gmapping.launch
navigation_dual/launch/: move_base.launch  navigation.launch
navigation_dual/maps/: map.yaml
navigation_dual/param/: global_costmap_params.yaml  local_costmap_params.yaml
navigation_dual/rviz/: navigation.rviz
navigation_dual/scripts/: cmd_publisher.py
slam_dual/: CMakeLists.txt
slam_dual/config/: lds_2d.lua  lds_2d_gazebo.lua
slam_dual/include/slam_dual/: flat_world_imu_node.h
slam_dual/launch/: slam_cartographer.launch  slam_gmapping.launch
slam_navi/: CMakeLists.txt  package.xml
slam_navi/launch/: auto_slam.launch  navi.launch  navi_dy.launch  navi_st.launch  slam.launch  slam_dy.launch  slam_navi.launch  slam_navi2.launch  slam_st.launch
slam_navi/maps/: map.pgm  map.yaml
slam_navi/param/: costmap_common_params.yaml  teb_local_planner_params.yaml  teb_local_planner_params_dy.yaml  teb_local_planner_params_st.yaml
slam_navi/rviz/: slam_navi.rviz
slam_navi/script/: actor_net.py  cmd_publisher.py  ddpg.py
slam_navi/script/weights/actor/: checkpoint  model.ckpt.data-00000-of-00001  model.ckpt.index
slam_navi/script/weights/critic/: checkpoint  model.ckpt.data-00000-of-00001  model.ckpt.index
slam_navi/scripts/: cmd_publisher.py
teleop/: CMakeLists.txt  package.xml
teleop/nodes/: teleop_key
