<?xml version="1.0"?>
<package format="2">
  <name>bringup_dual</name>
  <version>1.1.0</version>
  <description>Machine Learning and Control System dual-arm simulator</description>
  <license>MLCS</license>

  <author email="seungchul0406@gmail.com">Seungchul Ha</author>

  <maintainer email="seungchul0406@gmail.com">Seungchul Ha</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <depend>gazebo_ros</depend>
  <exec_depend>gazebo</exec_depend>
  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/> 
    <gazebo_ros gazebo_media_path="${prefix}/worlds"/>  
  </export>
</package>
