<?xml version="1.0"?>
<!--<package format="2">-->
  <name>teleop</name>
  <!--<version>1.1.0</version>-->
  <version>0.1.0</version>
  <description>
    Provides teleoperation using keyboard and xbox360 controller.
  </description>
  <license>BSD</license>
  <author>Jaehyun Lim</author>
  <author email="jaehyunlim@yonsei.ac.kr">Jaehyun Lim</author>
  <maintainer email="jaehyunlim@yonsei.ac.kr">Jaehyun Lim</maintainer>
  <url type="repository">https://github.com/MLCS-Yonsei/dual_sim</url>
  <url type="bugtracker">https://github.com/MLCS-Yonsei/dual_sim/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>joy</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>joy</run_depend>
</package>
